<resources>
    <string name="app_name">Foodist</string>
    <string name="home_icon">Home</string>
    <string name="favorite_icon">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_screen">Favorite Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="image">Image</string>
    <string name="detail_screen">Detail Screen</string>
    <string name="no_favorite_food">There is no favorite food</string>
    <string name="description">Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="time">Time</string>
    <string name="portion">Portion</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_title">Instruction Title</string>
    <string name="category">Category</string>
    <string name="tag">Tag</string>
    <string name="country">Country</string>
    <string name="back_button">Back Button</string>
    <string name="title_favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="unavailable"><![CDATA[Sorry we dont have it:<]]></string>
</resources>