<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tvTitleFood"
                android:layout_width="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:ellipsize="end"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvTitleFood"
                app:drawableLeftCompat="@drawable/baseline_flag_24" />

            <TextView
                android:id="@+id/tvTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textAlignment="center"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/tvCountry"
                app:layout_constraintTop_toBottomOf="@id/tvCountry"
                app:drawableLeftCompat="@drawable/baseline_tag_24" />


            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@id/tvTag"
                app:layout_constraintTop_toBottomOf="@id/tvTag"
                app:drawableLeftCompat="@drawable/baseline_category_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvInstructionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>
        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvInstructionTitle"
            app:layout_constraintTop_toBottomOf="@id/tvInstructionTitle"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>